<resources>
    <string name="app_name" translatable="false">SGAM Elfec</string>

    <string name="title_app_desc" translatable="false">Elfec S.A. SGAM</string>
    <string name="action_settings">Settings</string>
    <string name="title_unexpected_error">Error inesperado</string>
    <string name="msg_unexpected_error">Ocurrió un error inesperado en el Launcher y se reiniciará
        para evitar la pérdida de información.</string>
    <string name="vertical_ellipsis">&#8942;</string>

    <!-- Session Options -->
    <string name="title_session_options">Opciones de sesión</string>
    <string name="ses_opt_close_session">Cerrar sesión</string>
    <!-- Close Session -->
    <string name="msg_confirm_close_session">¿Está seguro que desea cerrar la sesión actual?\n\n
        Tome en cuenta que para cerrarla necesitará conexión a la red de la empresa y ésta también
        será necesaria en caso de querer abrir una nueva sesión.
    </string>
    <string name="msg_closing_device_session">Cerrando sesión remota de dispositivo&#8230;</string>
    <string name="msg_closing_session">Cerrando sesión&#8230;</string>

    <!-- Login -->
    <string name="title_login">Ingreso al sistema</string>
    <string name="btn_login">Ingresar</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="msg_fields_no_empty">Los campos no pueden estar vacios, reviselos para poder continuar</string>
    <string name="msg_login_user">Validando información de usuario&#8230;</string>
    <string name="msg_validating_device">Validando dispositivo&#8230;</string>
    <string name="msg_syncing_gcm_token">Sincronizando con google cloud messaging&#8230;</string>
    <string name="msg_registering_device">Registrando dispositivo&#8230;</string>
    <string name="msg_getting_policy_rules">Obteniendo reglas de directivas de
        usuario&#8230;</string>
    <string name="msg_device_login">Creando sesión de dispositivo&#8230;</string>
    <string name="msg_getting_apps">Cargando aplicaciones&#8230;</string>
    <string name="msg_account_registered">Cuenta agregada exitosamente!</string>

    <!-- Permissions -->
    <string name="title_permissions_are_mandatory">Permisos obligatorios</string>
    <string name="msg_permissions_are_mandatory">Uno o varios de los permisos requeridos no
    fueron concedidos. Todos los permisos son obligatorios,
    debe concederlos todos para poder continuar.</string>

    <!-- Desktop -->
    <string name="date_format">EEEE, d \'de\' MMMM</string>

    <!--Applications-->
    <string name="title_apps">Aplicaciones</string>


    <!-- Dialogos -->
    <string name="btn_ok">Aceptar</string>
    <string name="btn_cancel">Cancelar</string>

    <!-- Content desc -->
    <string name="desc_show_apps">Mostrar aplicaciones</string>
    <string name="title_activity_main">MainActivity</string>

    <!--AppLock Service-->
    <string name="app_lock_service_name">SGAM Elfec AppLock</string>
    <string name="app_lock_service_description">Habilite este servicio para tener la
        funcionalidad de AppLock. En conjunto con SGAM
        Elfec Launcher, permite controlar a los usuarios y su uso de aplicaciones.</string>
    <string name="app_locked_title">Aplicación bloqueada</string>
    <string
        name="app_locked_msg"><![CDATA[Usted no tiene permiso para utilizar la aplicación:<br/><b>%s</b>.<br/>
        Si requiere utilizar ésta aplicación contáctese con la unidad de T.I. para solicitar
        los permisos necesarios]]>
    </string>

    <!-- Installation Notification -->
    <string name="msg_starting_download">Iniciando descarga de aplicación&#8230;</string>
    <string name="msg_download_progress">Descargando aplicación %1$s/%2$s Kb</string>
    <string name="msg_download_completed">Descarga completa. La aplicación está lista
        para ser instalada, haga click para instalarla</string>

    <string name="msg_uninstall_pending">Aplicación pendiente de desinstalación. Haga click para
        desinstalar</string>

</resources>
