<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.Login">

    <TextView
        android:id="@+id/title_app_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/title_app_desc"
        android:textAppearance="@style/TextAppearance.CustomFont.Headline"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txt_size_app_name" />
    <com.elfec.sgam.view.widgets.FormattableDigitalClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/top_margin_clock"
        android:layout_below="@+id/title_app_desc"
        android:id="@+id/clock"
        android:textSize="@dimen/txt_size_clock"
        android:textAppearance="@style/TextAppearance.CustomFont.Light"
        android:textColor="@android:color/white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:layout_gravity="start"
            android:textAppearance="@style/TextAppearance.CustomFont.Headline"
            android:textColor="@android:color/white"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textSize="26sp" />
        <LinearLayout
            android:id="@+id/layout_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <com.elfec.sgam.view.widgets.ClearableEditText
            android:id="@+id/txt_username"
            style="@style/AppStyle.EditText.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="@dimen/btn_top_margin"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/user"
            android:drawableStart="@drawable/user"
            android:drawableRight="@drawable/btn_clear_edit_text"
            android:drawableEnd="@drawable/btn_clear_edit_text"
            android:hint="@string/hint_username" />

        <EditText
            android:id="@+id/txt_password"
            style="@style/AppStyle.EditText.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:drawablePadding="4dp"
            android:layout_marginTop="@dimen/edit_text_top_margin"
            android:drawableLeft="@drawable/password"
            android:drawableStart="@drawable/password"
            android:inputType="textPassword"
            android:hint="@string/hint_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_top_margin"
            android:text="@string/btn_login" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_top_margin"
            android:gravity="center"
            android:visibility="gone"
            android:baselineAligned="false"
            android:orientation="horizontal">
        <com.pnikosis.materialishprogress.ProgressWheel
            android:layout_width="@dimen/login_progress_size"
            android:layout_height="@dimen/login_progress_size"
            app:matProg_barColor="@color/soft_background_gray"
            app:matProg_progressIndeterminate="true" />
            <TextView
                android:id="@+id/txt_waiting_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_login_user"
                android:textColor="@android:color/white"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.CustomFont.Headline"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_errors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_top_margin"
            android:baselineAligned="false"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_error_color"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.CustomFont.Light"
                android:textSize="@dimen/txt_error_size"/>
            <Button
                android:id="@+id/btn_clear_errors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_ok"
                android:layout_gravity="end"/>
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/snackbar_position" />
</RelativeLayout>
